style, activate api

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -49,12 +49,12 @@
 //   display: flex;
 // }
 
-// .result {
-//   display: flex;
-//   align-items: center
-// }
+.result {
+  display: flex;
+  align-items: center
+}
 
-// .result img {
-//   max-width: 150px;
-//   margin: 5px 20px
-// }
+.result img {
+  max-width: 150px;
+  margin: 5px 20px
+}
